--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="A resume for a great guy like me">
+  <meta name="author" content="862351414">
 
-  <title>John Doe - Business Administration</title>
+  <title>Landon Torres - Dance Enthusiast</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Landon Torres</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/landontorres.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Landon Torres
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Dance Major</div>
+        <p class="lead mb-4">Talented college student consistently handles high-volume over long shifts while keeping focus. Background communicating clearly to complete orders. Multitasker with a history of supporting team and customer needs. Responsible dancer known for applying excellent communication skills and attention to detail to promptly prepare Dances.<br><br>
 
-        Enter bio here<br><br>
+        Collaborative individual offering great dancing, time management, and multitasking abilities. Commended for delivering unparalleled service and quality dance. Highly motivated Dancer with 10 years of expertise in delivering beautiful stage performances. Talented in consistently delivering each performance with precision due to daily practice, physical capabilities and dynamic coordination. Gifted professional with special focus in hip hop dance to enhance skillset and develop new moves and techniques.<br><br>
 
-        Enter bio here
+        Energetic Dancer with 10 years of experience performing solo and with highly talented dance groups. Confident and driven dancer with exceptional flexibility and endurance. Superior skills in dance genres. Organized and motivated employee eager to apply time management and organizational skills in various environments. Seeking entry-level opportunities to expand skills while facilitating company growth. Adaptable Software Engineer ready to support operations from conception through post-release support. Skilled creator of efficient code and exciting user experiences. Eager to elevate ongoing development projects or create novel software solutions geared towards driving increased usership. Highly-motivated employee with desire to take on new challenges. Strong worth ethic, adaptability and exceptional interpersonal skills. Adept at working effectively unsupervised and quickly mastering new skills. Attentive driver with strong knowledge of local routes and traffic patterns. Monitors road conditions and construction areas to maintain schedule adherence. Motivated high school student with a track record of academic excellence looking for part-time work. Intends to develop professional work experience utilizing excellent communication and time management skills. Dependable team member trained in register operations and customer service. Contributes to smooth front-end operations and goes beyond requirements to handle customer needs. Reliable, team-oriented, and efficiently completes assignments. Recent graduate with excellent research, technical and problem-solving skills. Detail-oriented and able to learn new concepts quickly. Responsible and motivated student ready to apply education in the workplace. Offers excellent technical abilities with software and applications, ability to handle challenging work, and excellent time management skills. Committed job seeker with a history of meeting company needs with consistent and organized practices. Skilled in working under pressure and adapting to new situations and challenges to best enhance the organizational brand. Hardworking employee with customer service, multitasking and time management abilities. Devoted to giving every customer a positive and memorable experience. User-minded Web Developer prioritizes usability and adaptability during projects. Designs sites and apps to attract users with aesthetically pleasing interfaces and exceptional UX elements. Comfortable working within large-scale collaborations or on individually-developed assets. Honest Cashier skilled at managing money, merchandising stock and assisting customers with locating desired items. Excellent oral and written communication, listening and time management skills with strong attention to detail and superior work ethic. Consistently accurate in drawer reconciliation. Hardworking and reliable employee with extensive background operating cash registers, stocking merchandise and providing excellent customer service. Highly organized, proactive and punctual. Works well within team settings. Enthusiastic retail professional with hands-on experience in customer service, payment processing and sales. Strong communicator and team player, eager to learn new processes to support overall organizational success.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/landonavery27">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/lllandon">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/landonavery27">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="landonavery727@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,44 +92,41 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Sandwich Artist</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Subway</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Kept customer and food preparation areas clean and well-organized.<br>
+              •Organized food preparation stations and regularly replenished supplies.<br>
+              •Delivered superior customer service focused on quality and meeting customer needs.<br> 
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Digital Personal Shopper</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Walmart</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              •Satisfied customers with quick, accurate service under tight deadlines.<br>
+              •Bagged groceries carefully to keep products in perfect condition, separated fragile products and kept frozen and perishable foods cold or fresh.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2019 - March 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Sales Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Smart and Final</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • Helped customers find specific products, answered questions and offered product advice.<br>
+            • Arranged new merchandise with signage and appealing displays to encourage customer sales and move overstock items.<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
@@ -152,33 +149,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Dance Major</div>
+            <div>Dance Art Bachelor</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2022 - December 2026</span>
           </div>
         </div>
 
@@ -191,7 +166,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="job1.jpeg" width="500px">
+            <img src="job2.jpeg" width="500px"><br>
+            <img src="job3.jpeg" width="500px">
+            <img src="job4.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +177,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Landon Torres</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
